--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./img/1.jpg"
+              src="1.jpg"
               class="d-block w-100"
               style="height: 500px; object-fit: cover"
             />
@@ -104,7 +104,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/4.jpg"
+              src="4.jpg"
               class="d-block w-100"
               style="height: 500px; object-fit: cover"
             />
@@ -119,7 +119,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/5.jpg"
+              src="5.jpg"
               class="d-block w-100"
               style="height: 500px; object-fit: cover"
             />
